--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hackathon-backend",
+  "name": "karigar-backend",
   "version": "1.0.0",
   "type": "module",
   "main": "src/server.js",
