--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
     "create-admin": "node src/scripts/createAdmin.js",
-    "seed-categories": "node src/scripts/seedCategories.js"
+    "seed-categories": "node src/scripts/seedCategories.js",
+    "seed:providers": "node src/scripts/seedProviders.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
