--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,8 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0",
-    "nodemailer": "^6.9.7"
+    "nodemailer": "^6.9.7",
+    "stream-chat": "^9.27.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
