--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,10 @@
     "lucide-react": "^0.552.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.9.5",
+    "stream-chat": "^9.27.2",
+    "stream-chat-react": "^13.13.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
